home-automation/node-red/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: node-red
  labels:
    app: node-red
    app.kubernetes.io/name: node-red
  annotations:
    reloader.stakater.com/auto: "true"
spec:
  replicas: 1
  selector:
    matchLabels:
      app: node-red
  template:
    metadata:
      labels:
        app: node-red
        app.kubernetes.io/name: node-red 
    spec:
      containers:
        - name: node-red
          image: nodered/node-red:3.1.1
          imagePullPolicy: IfNotPresent
          volumeMounts:
            - name: node-red
              mountPath: /data            
          ports:
            - containerPort: 1880
              name: http
              protocol: TCP
        - name: cron-borg
          image: ghcr.io/mattsve/borgmatic:0.4
          imagePullPolicy: IfNotPresent
          volumeMounts:
            - name: node-red
              mountPath: /data
            - name: backup-config
              mountPath: /config
            - name: secrets
              mountPath: /root/.ssh
              readOnly: true
          args:
            - cron
            - /config/crontab
      volumes:
        - name: node-red
          persistentVolumeClaim:
            claimName: node-red
        - name: backup-config
          emptyDir: {}
        - name: backup-templates
          configMap:
            name: node-red-backup-templates        
        - name: secrets
          secret:
            secretName: node-red
            items:
              - key: id_ed25519
                mode: 0600
                path: id_ed25519
              - key: id_ed25519.pub
                mode: 0644
                path: id_ed25519.pub
              - key: known_hosts
                mode: 0644
                path: known_hosts
        - name: backup-secrets
          secret:
            secretName: node-red
            items:
              - key: borg-repo
                mode: 0400
                path: borg-repo
              - key: borg-passphrase
                mode: 0400
                path: borg-passphrase
