home-automation/node-red/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: node-red  
spec:
  selector:
    app: node-red
  ports:
    - protocol: TCP
      port: 80
      targetPort: http
      name: http
